Revision history for Schedule::Easing

0.1.4 - ??
	- Support begin>final in shaping functions
	- Fix power/step inverses for out-of-range inputs

0.1.3 - 2025-08-29
	- Utilize Schedule::Easing::Stream
	- Support --stream options
	- Support --timestamps

0.1.2 - 2025-08-24
	- Support --expiration, --check, and warnExpired

0.1.1 - 2025-08-23
	- Shaping functions should work
	- Documentation
	- Bug fixes for Perl<5.26

0.1.0 - 2025-07-12
	- Core functionality
