@@ -57,9 +57,14 @@ sub schedule {
 	if(!$digest) { $digest=$D{message} }
 	if(!$digest) { return $$self{tsA} }
 	my $y=(unpack('L',substr(md5($digest//''),0,4))%$$self{tsrange})/$$self{tsrange};
-	if($$self{begin}>$$self{final}) { confess('begin>final not currently supported') }
-	if($y<$$self{begin}) { return 0 }
-	if($y>$$self{final}) { return }
+	if($$self{begin}<$$self{final}) {
+		if($y<$$self{begin}) { return 0 }
+		if($y>$$self{final}) { return }
+	}
+	elsif($$self{begin}>$$self{final}) {
+		if($y>$$self{begin}) { return 0 }
+		if($y<$$self{final}) { return }
+	}
 	return $$self{_unshaper}->($y,@$self{qw/tsA tsB begin final/},@{$$self{shapeopt}});
 }
 
