@@ -3,6 +3,8 @@ Revision history for Schedule::Easing
 0.1.4 - ??
 	- Support begin>final in shaping functions
 	- Fix power/step inverses for out-of-range inputs
+	- Fix Block::schedule
+	- Support ::schedule for begin>final
 
 0.1.3 - 2025-08-29
 	- Utilize Schedule::Easing::Stream
